--- a/frontend-organ-vlasti/src/app/components/izvestaj/izvestaj-list/izvestaj-list.component.html
+++ b/frontend-organ-vlasti/src/app/components/izvestaj/izvestaj-list/izvestaj-list.component.html
@@ -28,8 +28,8 @@
       <ng-container matColumnDef="metapodaci">
         <th mat-header-cell *matHeaderCellDef>Metapodaci</th>
         <td mat-cell *matCellDef="let izvestaj">
-          <a (click)="xmlMetadata(izvestaj.broj)" href="/izvestaj-list">XML</a><br>
-          <a (click)="jsonMetadata(izvestaj.broj)" href="/izvestaj-list">JSON</a>
+          <a *ngIf="true" (click)="xmlMetadata(izvestaj.broj)">XML</a><br>
+          <a *ngIf="true" (click)="jsonMetadata(izvestaj.broj)">JSON</a>
         </td>
       </ng-container>
 
@@ -45,6 +45,7 @@
         <form [formGroup]="izvestajForm">
           <div [class.disabled]="savePending">
             <mat-form-field>
+              <mat-label>Godina</mat-label>
               <input
               matInput
               autocomplete="off"
