--- a/frontend-poverenik/src/app/components/izvestaj/izvestaj-list/izvestaj-list.component.html
+++ b/frontend-poverenik/src/app/components/izvestaj/izvestaj-list/izvestaj-list.component.html
@@ -28,14 +28,14 @@
       <ng-container matColumnDef="metapodaci">
         <th mat-header-cell *matHeaderCellDef>Metapodaci</th>
         <td mat-cell *matCellDef="let izvestaj">
-          <a (click)="xmlMetadata(izvestaj.broj)" href="/izvestaj-list">XML</a><br>
-          <a (click)="jsonMetadata(izvestaj.broj)" href="/izvestaj-list">JSON</a>
+          <a *ngIf="true" (click)="xmlMetadata(izvestaj.broj)">XML</a><br>
+          <a *ngIf="true" (click)="jsonMetadata(izvestaj.broj)">JSON</a>
         </td>
       </ng-container>
 
       <tr mat-header-row *matHeaderRowDef="columns"></tr>
       <tr mat-row *matRowDef="let row; columns: columns;"></tr>
-      <tr class="mat-row" *matNoDataRow><td class="mat-cell" colspan="5">Nema izveštaja</td></tr>
+      <tr class="mat-row" *matNoDataRow><td class="mat-cell" colspan="4">Nema izveštaja</td></tr>
 
     </table>
     <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
